removed unused ports

--- a/kapacitor.conf
+++ b/kapacitor.conf
@@ -231,7 +231,7 @@ default-retention-policy = ""
   # From address for outgoing mail
   from = "kapacitorio@gmail.com"
   # List of default To addresses.
-  to = ["schwinngenbad@googlemail.com"]
+  to = ["example@googlemail.com"]
 
   # Skip TLS certificate verify when connecting to SMTP server
   no-verify = false
